--- a/components/Button/index.module.scss
+++ b/components/Button/index.module.scss
@@ -1,9 +1,11 @@
 @import "assets/scss/variable.module.scss";
 
 .container {
-  width: 200px;
+  width: auto;
+  min-width: 100px;
   height: 50px;
-  border: 3px solid #666666;
+  padding-left: 20px;
+  padding-right: 20px;
   background-color: #666666;
   border-radius: 25px;
   color: white;
